--- a/index.html
+++ b/index.html
@@ -47,7 +47,12 @@
 								<div class="4u 12u$(medium)">
 									<header>
 										<h2>关于我</h2>
-										<p>一只写代码的小可爱= =</p>
+										<!--[if IE]>
+											<p>一只写代码的皮卡丘= =</p>
+										<![endif]-->
+										<!--[if !IE]><!-->
+											<p>一只写代码的小可爱= =</p>
+										<!--<![endif]-->
 									</header>
 								</div>
 							</div>
